--- a/core/package.json
+++ b/core/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
-		"prettify": "prettier --config ../.prettierrc --write \"{lib,tests}/**/*.js\"",
-		"lint": "eslint -c ../.eslintrc.* lib tests",
+		"prettify": "balena-lint -e js --fix --typescript lib/**/*",
+		"lint": "eslint -c ../.eslintrc.* lib",
 		"start": "node lib/main.js",
 		"docs": "rimraf ../docs/ && npx typedoc --tsconfig tsconfig.json"
 	},
@@ -9,7 +9,6 @@
 		"ajv": "^6.5.0",
 		"ajv-semver": "^1.0.4",
 		"any-promise": "^1.3.0",
-		"async-mutex": "^0.1.3",
 		"balena-cli": "^12.55.0",
 		"balena-sdk": "^11.0.0",
 		"bluebird": "^3.5.1",
@@ -39,6 +38,7 @@
 		"ws": "^7.1.2"
 	},
 	"devDependencies": {
+		"@balena/lint": "^5.4.2",
 		"eslint": "^4.19.1",
 		"eslint-config-prettier": "^4.0.0",
 		"eslint-config-standard": "^11.0.0",
@@ -49,7 +49,6 @@
 		"eslint-plugin-prettier": "^3.0.1",
 		"eslint-plugin-promise": "^3.6.0",
 		"eslint-plugin-standard": "^3.0.1",
-		"prettier": "^1.19.1",
 		"rimraf": "^3.0.2",
 		"typedoc": "^0.21.2",
 		"typedoc-plugin-pages-fork": "0.0.1",
