--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "leviathan",
   "version": "1.31.9",
   "scripts": {
-    "prettify": "for component in 'suites' 'worker' 'core' 'client'; do npm --prefix $component run prettify; done",
-    "lint": "for component in 'suites' 'worker' 'core' 'client'; do npm --prefix $component run lint; done",
-    "preinstall": "for component in 'suites' 'worker' 'core' 'client'; do npm --prefix $component install; done",
+    "lint:fix": "for component in 'worker' 'core' 'client'; do npm --prefix $component run lint:fix; done",
+    "lint": "for component in 'worker' 'core' 'client'; do npm --prefix $component run lint; done",
+    "preinstall": "for component in 'worker' 'core' 'client'; do npm --prefix $component install; done",
     "docs": "npm --prefix core run docs"
   },
   "repository": {
