--- a/core/Dockerfile.template
+++ b/core/Dockerfile.template
@@ -11,13 +11,21 @@ COPY package*.json ./
 
 RUN npm ci
 
-FROM balenalib/%%BALENA_ARCH%%-alpine-node:12.19.1-3.12-run-20201211
+FROM balenalib/%%BALENA_ARCH%%-alpine:3.12-run-20211030
 
 ENV UDEV 1
 ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
 
 # hadolint ignore=DL3018
-RUN apk add --no-cache jq git vim rsync unzip bluez skopeo openssh-client
+RUN apk add --no-cache nodejs=~12.22.6 \
+		       jq \
+		       git \
+		       vim \
+		       rsync \
+		       unzip \
+		       bluez \
+		       skopeo \
+		       openssh-client
 
 WORKDIR /usr/app
 
