patch: Change code theme in docs
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -34,6 +34,6 @@
     // "excludeNotDocumented": true,
     "categorizeByGroup": true,
     "categoryOrder": ["helper", "*"],
-    "highlightTheme": "dark-plus",
+    "highlightTheme": "slack-ochin",
   }
 }
