workers: qemu: make kvm optional
KVM requires support from the CPU, BIOS/firmware, and hypervisor to all
be enabled. In the case where support is missing or disabled in any of
these places, KVM cannot be used. If the device node is missing,
attempting to map it in the compose file will fail, and the worker
cannot be started.

Instead, set a device cgroup policy to allow our container to create and
access the required device nodes at runtime if KVM is supported. This
allows a fallback to software emulation when KVM is not available. It
also allows for software emulation of targets not matching the host
architecture.

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "2.4"
 volumes:
   core-storage:
   reports-storage:
@@ -19,9 +19,10 @@ services:
       context: ./worker
       args:
         - SKIP_INSTALL_BINARY=true
-    devices:
-      - "/dev/net/tun:/dev/net/tun"
-      - "/dev/kvm:/dev/kvm"
+    device_cgroup_rules:
+        # allow dynamic creation and access of qemu required misc chardev nodes
+        # this includes /dev/kvm, and /dev/net/tun
+      - 'c 10:* rmw'
     cap_add:
       - NET_ADMIN # allow network setup
     network_mode: 'host'
