Convert to balena-lint
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,8 @@
 		"multi-client": "bin/multi-client.js"
 	},
 	"scripts": {
-		"prettify": "balena-lint --typescript --fix bin/ lib/ test/ && balena-lint --fix -e js --typescript bin/ lib/ *.js",
-		"lint": "balena-lint -u --typescript bin/ lib/ && balena-lint --typescript --tests test/ && npm run lint:js",
-		"lint:js": "eslint -c ../.eslintrc.* bin lib config",
+		"lint:fix": "balena-lint -e js -e ts --fix bin/ lib/ test/ *.js",
+		"lint": "balena-lint -e js -e ts --tests bin/ lib/ test/ *.js",
 		"test": "jest",
 		"build": "tsc && cp -r ./config ./build/config",
 		"single-start": "npm run build && cd build && node bin/single-client.js",
@@ -42,18 +41,8 @@
 		"@babel/core": "^7.6.0",
 		"@babel/node": "^7.6.1",
 		"@babel/preset-env": "^7.6.0",
-		"@balena/lint": "^5.4.2",
+		"@balena/lint": "^6.2.0",
 		"@types/jest": "^26.0.7",
-		"eslint": "^4.19.1",
-		"eslint-config-prettier": "^4.0.0",
-		"eslint-config-standard": "^11.0.0",
-		"eslint-plugin-import": "^2.16.0",
-		"eslint-plugin-jsdoc": "^3.9.1",
-		"eslint-plugin-lodash": "^2.6.1",
-		"eslint-plugin-node": "^6.0.0",
-		"eslint-plugin-prettier": "^3.0.1",
-		"eslint-plugin-promise": "^3.6.0",
-		"eslint-plugin-standard": "^3.0.1",
 		"jest": "^26.1.0",
 		"ts-jest": "^26.1.3",
 		"typescript": "^3.9.7"
