--- a/worker/package.json
+++ b/worker/package.json
@@ -5,10 +5,10 @@
 		"test": "test"
 	},
 	"scripts": {
-		"prettify": "balena-lint -u --fix --typescript bin/ lib/ test/",
-		"lint": "balena-lint -u --typescript lib/ bin/ && balena-lint --typescript --tests test/ && tsc --noEmit",
+		"lint:fix": "balena-lint -e js -e ts --fix bin/ lib/ test/",
+		"lint": "balena-lint -e js -e ts --tests lib/ bin/ test/ && tsc --noEmit",
 		"clean": "rm -rf build",
-		"test": "npm run prettify && npm run lint && npm run test:cov",
+		"test": "npm run lint:fix && npm run lint && npm run test:cov",
 		"build": "npm run clean && tsc",
 		"build:test": "npm run clean && tsc --project . && cp -r test/assets/image.zip build/test",
 		"start": "node ./build/bin",
@@ -37,7 +37,7 @@
 		"tar-fs": "^2.0.0"
 	},
 	"devDependencies": {
-		"@balena/lint": "^5.4.2",
+		"@balena/lint": "^6.2.0",
 		"@types/bluebird-retry": "^0.11.2",
 		"@types/chai": "^4.1.7",
 		"@types/chai-as-promised": "^7.1.0",
