--- a/.github/workflows/balena-ci.yml
+++ b/.github/workflows/balena-ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - uses: balena-io/deploy-to-balena-action@master
+      - uses: balena-io/deploy-to-balena-action@v0.5.4
         id: build
         with:
           balena_token: ${{ secrets.BALENA_TOKEN }}
@@ -23,6 +23,6 @@ jobs:
           fleet: ${{ matrix.fleets }}
           versionbot: false
           environment: balena-cloud.com
-          create_ref: true
+          create_tag: true
       - name: Log release ID built
         run: echo "Built release ID ${{ steps.build.outputs.release_id }}"
