--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -25,6 +25,7 @@ ENV UDEV 1
 # hadolint ignore=DL3018
 RUN apk add --no-cache \
   nodejs=~12.22.6 \
+  openssh-client \
   libusb-dev dbus-dev \
   gstreamer-tools gst-plugins-base gst-plugins-bad gst-plugins-good \
   bridge bridge-utils iproute2 dnsmasq iptables \
