Add applicationConfigVariables to balena.yml
Change-type: patch
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/balena.yml
+++ b/balena.yml
@@ -7,13 +7,14 @@ assets:
     data:
       url: 'https://github.com/balena-os/leviathan'
 data:
+  applicationConfigVariables:
+    - BALENA_SUPERVISOR_PERSISTENT_LOGGING: true
+    - BALENA_HOST_CONFIG_dtoverlay: >
+        "balena-fin","uart1,txd1_pin=32,rxd1_pin=33"
   applicationEnvironmentVariables:
-    - TESTBOT_DUT_TYPE: raspberrypi3
+    - TESTBOT_DUT_TYPE: "raspberrypi3"
     - SCREEN_CAPTURE: false
     - TESTBOT_PSU_ADDRESS: null
-    - BALENA_SUPERVISOR_PERSISTENT_LOGGING: true
-    - BALENA_HOST_CONFIG_dtoverlay: |
-        "balena-fin","uart1,txd1_pin=32,rxd1_pin=33"
   defaultDeviceType: fincm3
   supportedDeviceTypes:
     - fincm3
