--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -1,5 +1,7 @@
 FROM balenalib/%%BALENA_ARCH%%-alpine-node:12.19.1-3.12-run-20201211 AS node-build
 
+ENV npm_config_unsafe_perm true
+
 WORKDIR /tmp/node
 
 # hadolint ignore=DL3018
@@ -47,5 +49,11 @@ COPY entry.sh .
 COPY --from=node-build /tmp/node/package.json .
 COPY --from=node-build /tmp/node/node_modules node_modules
 COPY --from=node-build /tmp/node/build build
+
+# Install balena binary & npm in PATH
+RUN ln -sf /usr/app/node_modules/balena-cli/bin/balena /usr/bin/balena && \
+    balena version && \
+    ln -sf /usr/app/node_modules/npm/bin/npm-cli.js /usr/bin/npm && \
+    npm --version
 
 CMD ./entry.sh
