--- a/worker/package.json
+++ b/worker/package.json
@@ -19,6 +19,7 @@
 		"@balena/testbot": "^1.9.4",
 		"@types/bluebird": "^3.5.25",
 		"@types/config": "0.0.34",
+		"balena-cli": "^12.55.0",
 		"balena-sdk": "^15.54.2",
 		"bluebird": "^3.5.3",
 		"bluebird-retry": "^0.11.0",
