--- a/worker/package.json
+++ b/worker/package.json
@@ -36,6 +36,7 @@
 		"multicast-dns": "git+https://github.com/balena-io-modules/multicast-dns#listen-on-all-interfaces",
 		"mz": "^2.7.0",
 		"node-ssh": "^12.0.2",
+		"npm": "^8.3.1",
 		"tar-fs": "^2.0.0",
 		"ts-retry": "^2.3.9"
 	},
