patch: Delete interactive client code
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/core/package.json
+++ b/core/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"lint:fix": "balena-lint -e js -e ts --fix lib/**/*",
-		"lint": "balena-lint -e js -e ts --tests lib/**/*",
+		"lint": "balena-lint -u -e js -e ts --tests lib/**/*",
 		"start": "node lib/main.js",
 		"docs": "rimraf ../docs/ && npx typedoc --tsconfig tsconfig.json"
 	},
