--- a/worker/package.json
+++ b/worker/package.json
@@ -6,7 +6,7 @@
 	},
 	"scripts": {
 		"lint:fix": "balena-lint -e js -e ts --fix bin/ lib/ test/",
-		"lint": "balena-lint -e js -e ts --tests lib/ bin/ test/ && tsc --noEmit",
+		"lint": "balena-lint -u -e js -e ts --tests lib/ bin/ test/ && tsc --noEmit",
 		"clean": "rm -rf build",
 		"test": "npm run lint:fix && npm run lint && npm run test:cov",
 		"build": "npm run clean && tsc",
