--- a/worker/tsconfig.json
+++ b/worker/tsconfig.json
@@ -16,7 +16,8 @@
 		"noImplicitAny": true,
 		"allowJs": true,
 		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"types": []
 	},
 	"include": [
 		"./typings/*.d.ts",
