--- a/worker/package.json
+++ b/worker/package.json
@@ -32,6 +32,7 @@
 		"find-free-port": "^2.0.0",
 		"firmata": "^2.0.0",
 		"fs-extra": "^8.1.0",
+		"http-proxy-middleware": "^2.0.2",
 		"lodash": "^4.17.11",
 		"multicast-dns": "git+https://github.com/balena-io-modules/multicast-dns#listen-on-all-interfaces",
 		"mz": "^2.7.0",
