quick push before closing pr
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/core/Dockerfile.template
+++ b/core/Dockerfile.template
@@ -25,7 +25,8 @@ RUN apk add --no-cache nodejs=~12.22.6 \
 		       unzip \
 		       bluez \
 		       skopeo \
-		       openssh-client
+		       openssh-client \
+			   socat
 
 WORKDIR /usr/app
 
