--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -32,7 +32,7 @@ RUN apk add --no-cache \
     && rm /usr/share/qemu/edk2* `# remove huge edk2 firmware` \
   && (apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/v3.12/community ovmf || true)
 
-RUN apk add uhubctl --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing
+RUN apk add uhubctl --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing || true
 
 # create qemu-bridge-helper ACL file
 # https://wiki.qemu.org/Features/HelperNetworking
