--- a/core/pagesconfig.json
+++ b/core/pagesconfig.json
@@ -5,7 +5,17 @@
             "pages": [
                 {
                     "title": "Quickstart",
-                    "source": "../documentation/quickstart.md"
+                    "source": "../documentation/quickstart.md",
+                    "children": [
+                        {
+                            "title": "Testbot Worker",
+                            "source": "../documentation/quickstart-testbot.md"
+                        },
+                        {
+                            "title": "Qemu Worker",
+                            "source": "../documentation/quickstart-qemu.md"
+                        }
+                    ]
                 },
                 {
                     "title": "Config.js Reference",
