--- a/core/Dockerfile.template
+++ b/core/Dockerfile.template
@@ -23,9 +23,10 @@ RUN apk add --no-cache nodejs~=12.22 \
 		       vim \
 		       rsync \
 		       unzip \
-		       bluez \
 		       skopeo \
-		       openssh-client
+		       openssh-client \
+			   socat \
+			   rsync
 
 WORKDIR /usr/app
 
