--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -20,11 +20,16 @@ RUN npm run build
 FROM balenalib/%%BALENA_ARCH%%-alpine:3.12-run-20211030
 
 ENV UDEV 1
+ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
 
 # ovmf is only packaged for x86_64 and aarch64 so ignore failures on arm
 # hadolint ignore=DL3018
 RUN apk add --no-cache \
-  nodejs~=12.22 \
+  nodejs=~12.22 \
+  openssh-client \
+  bluez \
+  socat \
+  rsync \
   libusb-dev dbus-dev \
   gstreamer-tools gst-plugins-base gst-plugins-bad gst-plugins-good \
   bridge bridge-utils iproute2 dnsmasq iptables \
