--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -1,4 +1,5 @@
-FROM balenalib/%%BALENA_ARCH%%-alpine-node:12.19.1-3.12-run-20201211 AS node-build
+ARG BALENA_ARCH=%%BALENA_ARCH%%
+FROM balenalib/${BALENA_ARCH}-alpine-node:12.19.1-3.12-run-20201211 AS node-build
 
 WORKDIR /tmp/node
 
@@ -17,7 +18,7 @@ COPY bin bin
 
 RUN npm run build
 
-FROM balenalib/%%BALENA_ARCH%%-alpine:3.12-run-20211030
+FROM balenalib/${BALENA_ARCH}-alpine:3.12-run-20211030
 
 ENV UDEV 1
 ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
