worker: bump testbotsdk for 243390_rpi3
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/worker/package.json
+++ b/worker/package.json
@@ -16,7 +16,7 @@
 		"test:fast": "npm run build:test && mocha"
 	},
 	"dependencies": {
-		"@balena/testbot": "^1.9.8",
+		"@balena/testbot": "^1.9.10-add-243390-rpi3-889404352b38cb6f5992caa5adff71a7590946bd",
 		"@types/bluebird": "^3.5.25",
 		"@types/config": "0.0.34",
 		"balena-sdk": "^16.12.1",
