--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -3,7 +3,7 @@ FROM balenalib/%%BALENA_ARCH%%-alpine-node:12.19.1-3.12-run-20201211 AS node-bui
 WORKDIR /tmp/node
 
 # hadolint ignore=DL3018
-RUN apk add --no-cache libusb-dev dbus-dev python3 make build-base git linux-headers
+RUN apk add --no-cache libusb-dev dbus-dev python3 make build-base git linux-headers eudev-dev
 
 ARG SKIP_INSTALL_BINARY
 
@@ -25,6 +25,7 @@ ENV UDEV 1
 # hadolint ignore=DL3018
 RUN apk add --no-cache \
   nodejs~=12.22 \
+  eudev-dev \
   libusb-dev dbus-dev \
   gstreamer-tools gst-plugins-base gst-plugins-bad gst-plugins-good \
   bridge bridge-utils iproute2 dnsmasq iptables \
