docker-compose: Set restart policies for core and qemu worker
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -33,6 +33,7 @@ services:
       - UDEV=0
       - CORE_PORT # default 2000, change this to avoid port conflicts
     network_mode: host
+    restart: 'no'
 
 volumes:
   core-storage:
