--- a/worker/package.json
+++ b/worker/package.json
@@ -34,6 +34,7 @@
 		"lodash": "^4.17.11",
 		"multicast-dns": "git+https://github.com/balena-io-modules/multicast-dns#listen-on-all-interfaces",
 		"mz": "^2.7.0",
+		"proper-lockfile": "^4.1.2",
 		"tar-fs": "^2.1.1"
 	},
 	"devDependencies": {
@@ -49,6 +50,7 @@
 		"@types/mocha": "^5.2.5",
 		"@types/mz": "0.0.32",
 		"@types/node": "^10.12.18",
+		"@types/proper-lockfile": "^4.1.2",
 		"@types/request-promise": "^4.1.42",
 		"@types/sinon": "^7.0.11",
 		"@types/tar-fs": "^1.16.1",
