worker: Use uname to select worker base image for QEMU
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/docker-compose.qemu.yml
+++ b/docker-compose.qemu.yml
@@ -6,7 +6,7 @@ services:
       context: ./worker
       dockerfile: Dockerfile.template
       args:
-        - BALENA_ARCH=amd64
+        - BALENA_ARCH=${BALENA_ARCH:-amd64}
         - SKIP_INSTALL_BINARY=true
     device_cgroup_rules:
       # allow dynamic creation and access of qemu required misc chardev nodes
