--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -18,6 +18,10 @@ RUN apk add --no-cache \
 		util-linux
 
 COPY package*.json ./
+COPY tsconfig.json tsconfig.json
+COPY contracts contracts
+COPY lib lib
+COPY config config
 
 ENV npm_config_unsafe_perm true
 
@@ -30,13 +34,12 @@ RUN apk add --no-cache --virtual .build-deps \
 	npm ci && \
 	apk del .build-deps
 
+RUN npm run build
+
 # Install balena binary
 RUN ln -sf /usr/app/node_modules/balena-cli/bin/balena /usr/bin/balena && \
     balena version
 
-COPY contracts contracts
-COPY lib lib
-COPY config config
 COPY entry.sh entry.sh
 
 CMD [ "/usr/app/entry.sh" ]
