--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -1,34 +1,18 @@
 version: "2"
 
 services:
-  client:
-    build: ./client
-    volumes:
-      - "${WORKSPACE:-./workspace}:/usr/src/app/workspace:ro"
-      - "${REPORTS:-./workspace/reports}:/usr/src/app/reports:rw"
-      - "${SUITES:-./suites}:/usr/src/app/suites:ro"
-    environment:
-      - WORKER_PORT # allow this env var to be used in config.js
-      - BALENACLOUD_API_KEY # allow this env var to be used in config.js
-      - BALENACLOUD_ORG # allow this env var to be used in config.js
-      - BALENACLOUD_APP_NAME # allow this env var to be used in config.js
-      - DEVICE_TYPE # allow this env var to be used in config.js
-      - WORKER_TYPE # allow this env var to be used in config.js
-    depends_on:
-      - core
-
   core:
-    privileged: true # preload requires docker-in-docker
-    build: core
+    privileged: true
+    build:
+      context: ./core
     volumes:
-      - core-storage:/data
-      - reports-storage:/reports
+      - "${WORKSPACE:-./workspace}:/usr/src/app/workspace:rw"
+      - "${DATA:-./workspace/data}:/data:rw"
+      - "${REPORTS:-./workspace/reports}:/reports:rw"
     tmpfs:
       - /var/run # use tmpfs docker-in-docker pid files
       - /var/lib/docker # use tmpfs for docker-in-docker data root
     restart: 'no'
-    devices:
-      - /dev:/dev # required for creating losetup devices during preload
 
 volumes:
   core-storage:
