use virtual interface for port forwarding
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -15,6 +15,7 @@ RUN apk add --no-cache \
 		rsync \
 		docker \
 		bind-tools \
+		bridge bridge-utils iproute2 \
 		util-linux
 
 COPY package*.json ./
