--- a/worker/package.json
+++ b/worker/package.json
@@ -16,7 +16,7 @@
 		"test:fast": "npm run build:test && mocha"
 	},
 	"dependencies": {
-		"@balena/testbot": "1.9.12",
+		"@balena/testbot": "^1.9.13",
 		"@types/bluebird": "^3.5.25",
 		"@types/config": "0.0.34",
 		"balena-sdk": "^16.12.1",
