worker: bump etchersdk to 7.1.0
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -4,7 +4,7 @@ FROM balenalib/${BALENA_ARCH}-alpine-node:12.19-run AS node-build
 WORKDIR /tmp/node
 
 # hadolint ignore=DL3018
-RUN apk add --no-cache libusb-dev dbus-dev python3 make build-base git linux-headers
+RUN apk add --no-cache libusb-dev dbus-dev python3 make build-base git linux-headers eudev-dev
 
 ARG SKIP_INSTALL_BINARY
 
@@ -31,7 +31,7 @@ RUN apk add --no-cache \
   bluez \
   socat \
   rsync \
-  libusb-dev dbus-dev \
+  libusb-dev dbus-dev eudev-dev \
   gstreamer-tools gst-plugins-base gst-plugins-bad gst-plugins-good \
   bridge bridge-utils iproute2 dnsmasq iptables \
   qemu-img qemu-system-x86_64 \
