Set QEMU_ARCH for aarch64 workers
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/docker-compose.qemu.yml
+++ b/docker-compose.qemu.yml
@@ -22,6 +22,7 @@ services:
       - WORKER_TYPE=qemu
       - SCREEN_CAPTURE=true
       - WORKER_PORT # default 80 and must match client config.js workers
+      - QEMU_ARCH=${QEMU_ARCH:-x86_64}
     restart: 'no'
 
   core:
