TEST: map dev in volume
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -23,12 +23,13 @@ services:
     volumes:
       - core-storage:/data
       - reports-storage:/reports
+      - /dev:/dev
     tmpfs:
       - /var/run # use tmpfs docker-in-docker pid files
       - /var/lib/docker # use tmpfs for docker-in-docker data root
     restart: 'no'
-    devices:
-      - /dev:/dev # required for creating losetup devices during preload
+    #devices:
+    #  - /dev:/dev # required for creating losetup devices during preload
 
 volumes:
   core-storage:
