Add docs for debug object
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/core/pagesconfig.json
+++ b/core/pagesconfig.json
@@ -26,6 +26,10 @@
                     "source": "../documentation/writing-tests.md"
                 },
                 {
+                    "title": "Debugging tests in Leviathan",
+                    "source": "../documentation/debugging.md"
+                },
+                {
                     "title": "Tips and Reference",
                     "source": "../documentation/reference-tips.md"
                 },
