--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -7,8 +7,12 @@ services:
       - "${WORKSPACE:-./workspace}:/usr/src/app/workspace:ro"
       - "${REPORTS:-./workspace/reports}:/usr/src/app/reports:rw"
       - "${SUITES:-./suites}:/usr/src/app/suites:ro"
-    env_file:
-      - .env
+    environment:
+      - WORKER_TYPE=${WORKER_TYPE}
+      - DEVICE_TYPE=${DEVICE_TYPE}
+      - BALENACLOUD_API_KEY=${BALENACLOUD_API_KEY}
+      - BALENACLOUD_ORG=${BALENACLOUD_ORG}
+      - BALENACLOUD_APP_NAME=${BALENACLOUD_APP_NAME}
     depends_on:
       - core
 
