worker: bump mdns-resolver to upstream v7.2.5
This was pinned to a forked version of this module [0], which is
seemingly no longer necessary.

[0] https://github.com/balena-io-modules/multicast-dns/tree/listen-on-all-interfaces

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/worker/package.json
+++ b/worker/package.json
@@ -32,7 +32,7 @@
 		"firmata": "^2.0.0",
 		"fs-extra": "^8.1.0",
 		"lodash": "^4.17.11",
-		"multicast-dns": "git+https://github.com/balena-io-modules/multicast-dns#listen-on-all-interfaces",
+		"multicast-dns": "^7.2.5",
 		"mz": "^2.7.0",
 		"proper-lockfile": "^4.1.2",
 		"tar-fs": "^2.1.1"
