--- a/core/package.json
+++ b/core/package.json
@@ -23,14 +23,14 @@
 		"lodash": "^4.17.10",
 		"md5-file": "^4.0.0",
 		"mz": "^2.7.0",
-		"node-ssh": "^5.1.2",
+		"node-ssh": "^12.0.4",
 		"npm": "^6.14.6",
 		"pensieve-sdk": "^1.0.0",
 		"request": "^2.88.0",
 		"request-promise": "^4.2.4",
 		"balena-image-fs": "^7.0.6",
 		"simple-git": "^1.85.0",
-		"ssh-keygen": "^0.4.1",
+		"ssh-keygen-lite": "^1.3.0",
 		"string-to-stream": "^1.1.1",
 		"tap": "^13.1.1",
 		"tap-parser": "^7.0.0",
