minor: Add support for Private Contracts
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -34,7 +34,7 @@ RUN apk add --no-cache --virtual .build-deps \
 RUN ln -sf /usr/app/node_modules/balena-cli/bin/balena /usr/bin/balena && \
     balena version
 
-COPY contracts contracts
+COPY contracts/ contracts/
 COPY lib lib
 COPY config config
 COPY entry.sh entry.sh
