--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "core/contracts/contracts"]
+[submodule "contracts/contracts"]
 	path = core/contracts/contracts
 	url = https://github.com/balena-io/contracts.git
