core: Set node engine to match the Dockerfile
This version can likely be increased now that the balena-cli
is no longer part of the ndoe dependencies, but for now just
publish the current setting.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/core/package.json
+++ b/core/package.json
@@ -41,5 +41,8 @@
 		"typedoc": "^0.21.2",
 		"typedoc-plugin-pages-fork": "0.0.1",
 		"typescript": "^4.4.4"
+	},
+	"engines": {
+		"node": "~14.19.3"
 	}
 }
