--- a/core/package.json
+++ b/core/package.json
@@ -18,7 +18,6 @@
 		"express-ws": "^4.0.0",
 		"fs-extra": "^3.0.1",
 		"indent-string": "^3.2.0",
-		"inquirer": "^5.1.0",
 		"lodash": "^4.17.10",
 		"md5-file": "^4.0.0",
 		"mz": "^2.7.0",
@@ -26,12 +25,12 @@
 		"pensieve-sdk": "^1.0.0",
 		"request": "^2.88.0",
 		"request-promise": "^4.2.4",
-		"simple-git": "^1.85.0",
 		"ssh-keygen-lite": "^1.3.0",
 		"string-to-stream": "^1.1.1",
 		"tap": "^14.10.8",
 		"tap-parser": "^7.0.0",
 		"tar-fs": "^2.0.0",
+		"tmp": "^0.2.1",
 		"ws": "^7.1.2"
 	},
 	"devDependencies": {
