--- a/docker-compose.qemu.yml
+++ b/docker-compose.qemu.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile.template
       args:
         - BALENA_ARCH=${BALENA_ARCH:-amd64}
-        - WORKER_RELEASE=${WORKER_RELEASE:-2.5.10}
+        - WORKER_RELEASE=${WORKER_RELEASE:-latest}
     device_cgroup_rules:
       # https://www.kernel.org/doc/Documentation/admin-guide/devices.txt
       # loopback devices
