--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "lint:fix": "for component in 'core' 'client'; do npm --prefix $component run lint:fix; done",
     "lint": "for component in 'core' 'client'; do npm --prefix $component run lint; done",
     "preinstall": "for component in 'core' 'client'; do npm --prefix $component install; done",
-    "docs": "npm --prefix core run docs"
+    "docs": "npm --prefix core run docs",
+    "test": "exit 0"
   },
   "repository": {
     "type": "git",
