--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -49,14 +49,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 
 RUN npm ci
 
-FROM base as final
-
-RUN apt-get update && apt-get install --no-install-recommends -y \
-	build-essential \
-	make \
-	python && \
-	apt-get clean && \
-	rm -rf /var/lib/apt/lists/*
+FROM npm-ci as final
 
 COPY . .
 
