minor: Delete Core's test helpers
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/core/pagesconfig.json
+++ b/core/pagesconfig.json
@@ -42,5 +42,5 @@
     ],
     "output": "pages",
     "listInvalidSymbolLinks": false,
-    "reflectionNavigationTitle": "Helper Methods"
+    "reflectionNavigationTitle": "Core Logic"
 }
