--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -15,6 +15,8 @@ services:
       - BALENACLOUD_APP_NAME=${BALENACLOUD_APP_NAME}
     depends_on:
       - core
+    networks:
+      - virtual-bridge
 
   core:
     privileged: true # preload requires docker-in-docker
@@ -28,7 +30,18 @@ services:
     restart: 'no'
     devices:
       - /dev:/dev # required for creating losetup devices during preload
+    networks:
+      - virtual-bridge
 
 volumes:
   core-storage:
   reports-storage:
+
+networks:
+  virtual-bridge:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.56.0.0/16
+          gateway: 172.56.100.1
