--- a/docker-compose.qemu.yml
+++ b/docker-compose.qemu.yml
@@ -33,6 +33,8 @@ services:
       - QEMU_MEMORY=${QEMU_MEMORY}
       - QEMU_DEBUG=${QEMU_DEBUG}
     restart: 'no'
+    networks:
+      - virtual-bridge
 
   core:
     depends_on:
@@ -41,3 +43,12 @@ services:
 volumes:
   core-storage:
   reports-storage:
+
+networks:
+  virtual-bridge:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.56.0.0/16
+          gateway: 172.56.100.1
