Fix renovate extends syntax to include balena-io config
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["github>balena-io/renovate-config"],
+  "extends": ["github>balena-io/renovate-config//.github/renovate"],
   "regexManagers": [
     {
       "fileMatch": ["(^|/)(?:docker-)?compose[^/]*\\.ya?ml$"],
