renovate: Disable automerge for major and minor updates
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,5 +8,14 @@
       "datasourceTemplate": "github-tags",
       "extractVersionTemplate": "^v(?<version>.*)$"
     }
+  ],
+  "packageRules": [
+    {
+      "automerge": false,
+      "matchUpdateTypes": [
+        "major",
+        "minor"
+      ]
+    }
   ]
 }
