--- a/core/package.json
+++ b/core/package.json
@@ -3,7 +3,7 @@
 		"lint:fix": "balena-lint -e js --fix lib/**/*",
 		"lint": "balena-lint -u -e js --tests lib/**/*",
 		"start": "node lib/main.js",
-		"docs": "rimraf ../docs/ && npx typedoc --tsconfig tsconfig.json"
+		"docs": "npx typedoc --tsconfig tsconfig.json"
 	},
 	"dependencies": {
 		"ajv": "^6.12.6",
@@ -30,9 +30,8 @@
 	},
 	"devDependencies": {
 		"@balena/lint": "^6.2.1",
-		"rimraf": "^4.1.2",
-		"typedoc": "^0.23.0",
-		"typedoc-plugin-pages-fork": "0.0.1",
+		"typedoc": "0.21.10",
+		"typedoc-plugin-pages-fork": "^0.0.1",
 		"typescript": "^4.4.4"
 	},
 	"engines": {
