patch: Remove config package from client
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,7 +7,7 @@ RUN apk add --no-cache bash git
 COPY package* ./
 RUN npm ci
 
-COPY config ./config
+COPY config.js ./
 COPY *config* ./
 COPY lib ./lib
 COPY bin ./bin
