--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
 		"lint:fix": "balena-lint -e js -e ts --fix bin/ lib/ test/ *.js",
 		"lint": "balena-lint -u -e js -e ts --tests bin/ lib/ test/ *.js",
 		"test": "jest",
-		"build": "tsc && cp -r ./config ./build/config",
+		"build": "tsc",
 		"single-start": "npm run build && cd build && node bin/single-client.js",
 		"single-start-es5": "npm run build && cd build && babel-node --presets @babel/env bin/single-client.js",
 		"multi-start": "npm run build && cd build && node bin/multi-client.js",
@@ -22,7 +22,6 @@
 		"balena-sdk": "^16.3.0",
 		"bluebird": "^3.5.3",
 		"bluebird-retry": "^0.11.0",
-		"config": "^3.2.2",
 		"fs-extra": "^8.1.0",
 		"lodash": "^4.17.11",
 		"md5-file": "^4.0.0",
